--- a/app/views/agents/_search_widget.html.erb
+++ b/app/views/agents/_search_widget.html.erb
@@ -43,125 +43,27 @@
   <div class="row with-forms">
     <!-- Country -->
     <div class="col-md-12">
-      <select data-placeholder="All States" class="chosen-select" >
+      <select name="country" data-placeholder="Select Country" class="chosen-select", id="country" >
         <option>Select Country</option>
-        <option>Alabama</option>
-        <option>Alaska</option>
-        <option>Arizona</option>
-        <option>Arkansas</option>
-        <option>California</option>
-        <option>Colorado</option>
-        <option>Connecticut</option>
-        <option>Delaware</option>
-        <option>Florida</option>
-        <option>Georgia</option>
-        <option>Hawaii</option>
-        <option>Idaho</option>
-        <option>Illinois</option>
-        <option>Indiana</option>
-        <option>Iowa</option>
-        <option>Kansas</option>
-        <option>Kentucky</option>
-        <option>Louisiana</option>
-        <option>Maine</option>
-        <option>Maryland</option>
-        <option>Massachusetts</option>
-        <option>Michigan</option>
-        <option>Minnesota</option>
-        <option>Mississippi</option>
-        <option>Missouri</option>
-        <option>Montana</option>
-        <option>Nebraska</option>
-        <option>Nevada</option>
-        <option>New Hampshire</option>
-        <option>New Jersey</option>
-        <option>New Mexico</option>
-        <option>New York</option>
-        <option>North Carolina</option>
-        <option>North Dakota</option>
-        <option>Ohio</option>
-        <option>Oklahoma</option>
-        <option>Oregon</option>
-        <option>Pennsylvania</option>
-        <option>Rhode Island</option>
-        <option>South Carolina</option>
-        <option>South Dakota</option>
-        <option>Tennessee</option>
-        <option>Texas</option>
-        <option>Utah</option>
-        <option>Vermont</option>
-        <option>Virginia</option>
-        <option>Washington</option>
-        <option>West Virginia</option>
-        <option>Wisconsin</option>
-        <option>Wyoming</option>
+          <%= options_for_select(
+            CS.countries.invert
+          ) %>
       </select>
     </div>
   </div>
   <!-- Row / End -->
-
 
   <!-- Row -->
   <div class="row with-forms">
     <!-- States -->
     <div class="col-md-12">
-      <select data-placeholder="All States" class="chosen-select" >
+      <select data-placeholder="All States" class="chosen-select", id="state" >
         <option>All States</option>
-        <option>Alabama</option>
-        <option>Alaska</option>
-        <option>Arizona</option>
-        <option>Arkansas</option>
-        <option>California</option>
-        <option>Colorado</option>
-        <option>Connecticut</option>
-        <option>Delaware</option>
-        <option>Florida</option>
-        <option>Georgia</option>
-        <option>Hawaii</option>
-        <option>Idaho</option>
-        <option>Illinois</option>
-        <option>Indiana</option>
-        <option>Iowa</option>
-        <option>Kansas</option>
-        <option>Kentucky</option>
-        <option>Louisiana</option>
-        <option>Maine</option>
-        <option>Maryland</option>
-        <option>Massachusetts</option>
-        <option>Michigan</option>
-        <option>Minnesota</option>
-        <option>Mississippi</option>
-        <option>Missouri</option>
-        <option>Montana</option>
-        <option>Nebraska</option>
-        <option>Nevada</option>
-        <option>New Hampshire</option>
-        <option>New Jersey</option>
-        <option>New Mexico</option>
-        <option>New York</option>
-        <option>North Carolina</option>
-        <option>North Dakota</option>
-        <option>Ohio</option>
-        <option>Oklahoma</option>
-        <option>Oregon</option>
-        <option>Pennsylvania</option>
-        <option>Rhode Island</option>
-        <option>South Carolina</option>
-        <option>South Dakota</option>
-        <option>Tennessee</option>
-        <option>Texas</option>
-        <option>Utah</option>
-        <option>Vermont</option>
-        <option>Virginia</option>
-        <option>Washington</option>
-        <option>West Virginia</option>
-        <option>Wisconsin</option>
-        <option>Wyoming</option>
+
       </select>
     </div>
   </div>
   <!-- Row / End -->
-
 
 
 
@@ -169,22 +71,9 @@
   <div class="row with-forms">
     <!-- Cities -->
     <div class="col-md-12">
-      <select data-placeholder="All Cities" class="chosen-select" >
+      <select data-placeholder="All Cities" class="chosen-select" id="city" >
         <option>All Cities</option>
-        <option>New York</option>
-        <option>Los Angeles</option>
-        <option>Chicago</option>
-        <option>Brooklyn</option>
-        <option>Queens</option>
-        <option>Houston</option>
-        <option>Manhattan</option>
-        <option>Philadelphia</option>
-        <option>Phoenix</option>
-        <option>San Antonio</option>
-        <option>Bronx</option>
-        <option>San Diego</option>
-        <option>Dallas</option>
-        <option>San Jose</option>
+
       </select>
     </div>
   </div>
@@ -226,20 +115,20 @@
   <br>
 
   <!-- Area Range -->
-  <div class="range-slider">
+  <!-- <div class="range-slider">
     <label>Area Range</label>
     <div id="area-range" data-min="0" data-max="1500" data-unit="sq ft"></div>
     <div class="clearfix"></div>
   </div>
 
-  <br>
+  <br> -->
 
   <!-- Price Range -->
-  <div class="range-slider">
+  <!-- <div class="range-slider">
     <label>Price Range</label>
     <div id="price-range" data-min="0" data-max="400000" data-unit="$"></div>
     <div class="clearfix"></div>
-  </div>
+  </div> -->
 
 
 
